<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#8BCFEA"
    tools:context="com.example.presentation.ui.fargments.auth.AuthUserFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/profile"
        android:src="@drawable/rounder_profile"
        app:layout_constraintBottom_toTopOf="@id/name"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounder"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/surname"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounder"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/surname"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/age"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounder"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/surname"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        android:text="@string/signIn"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="#01AED8"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>